# GithubRepoAuditor

./: .coverage  .dockerignore  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CASE-STUDY.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO-PLAN.md  DEMO-SCRIPT.md  DEPLOY.md  DOC-RECONCILIATION.md  Dockerfile  IMPLEMENTATION-ROADMAP.md  Makefile  NEXT_CHAT_HANDOFF.md  README.md  SECURITY.md  fly.toml  proof-pr.json  pyproject.toml  requirements.txt
.codex/: verify.commands
.github/: pull_request_template.md
.playwright-mcp/: page-2026-05-12T08-45-11-296Z.yml  page-2026-05-12T08-45-18-883Z.yml  page-2026-05-12T08-45-23-223Z.yml  page-2026-05-12T08-45-28-099Z.yml
config/: audit-config.example.yaml  github-projects.yaml  notion-project-map.json  notion-projection-policy.schema.json  portfolio-catalog.yaml  project-registry-overrides.json  scorecards.yaml
contracts/: contract-descriptor.v1.schema.json  ghra.portfolio_truth.json
docs/: PORTFOLIO-DISPOSITION.md  architecture.md  audit-cli-migration.md  audit-serve.md  catalog-triage-worklist-2026-06-02.md  ci-coverage-initiative.md  codex-restart-packet.md  distribution.md  doctor-release-standard.md  extending-analyzers.md  machine-wide-consolidation.md  modes.md  operator-troubleshooting.md  portfolio-context-contract.md  project-history.md  proof-package-contract.md  proof-pr-dogfood.md  release-gates.md  security-model.md  weekly-review.md  workbook-template-maintenance.md  workbook-tour.md  writeback-safety-model.md
output/: doc-truth-up-review-2026-05-30.md  doc-truth-up-run-2026-05-30.json  portfolio-warehouse.db
scripts/: _bootstrap.py  add_licenses.py  benchmark_large_portfolio.py  build_codex_restart_packet.py  build_demo_artifacts.py  doc_truth_up_batch.py  doc_truth_up_guard.py  doc_truth_up_merge.py  doc_truth_up_review.py  doc_truth_up_triage.py  generate_excel_template.py  operator_os_seam_linter.py  presence-claims-audit.workflow.js  release.sh  run-instructions-audit.workflow.js  validate_proof_package.py
src/: AGENTS.md  action_sync_automation.py  action_sync_outcomes.py  action_sync_packets.py  action_sync_readiness.py  action_sync_tuning.py  analyst_views.py  analyzer_cache.py  api_checkout.py  api_only.py  approval_ledger.py  archive_candidates.py  auto_apply.py  automation_executor.py  automation_proposals.py  automation_workflow.py  badge_export.py  badges.py  baseline_context.py  briefing.py  cache.py  catalog_validator.py  cli.py  cli_mode_validation.py  cli_output.py  cloner.py  codex_restart_packet.py  config.py  context_quality.py  contract_migration.py  control_center_presentation.py  control_center_report_state.py  control_center_snapshot.py  dep_graph.py  diagnostics.py  diff.py  draft_readmes.py  excel_action_items_helpers.py  excel_action_sync_readiness_helpers.py  excel_activity_sheet_helpers.py  (+183 more)
tests/: conftest.py  test_action_sync_automation.py  test_action_sync_outcomes.py  test_action_sync_packets.py  test_action_sync_readiness.py  test_action_sync_tuning.py  test_activity.py  test_analyzer_cache.py  test_analyzer_staleness_and_releases.py  test_analyzers.py  test_api_checkout.py  test_api_only.py  test_app_cli_boundary.py  test_approval_ledger.py  test_arc_f_surfaces.py  test_archive.py  test_auto_apply.py  test_automation_executor.py  test_automation_proposals.py  test_automation_workflow.py  test_badge_export.py  test_badges.py  test_briefing.py  test_cache.py  test_cache_reconcile.py  test_cache_ttl.py  test_catalog_validator.py  test_cicd.py  test_cli_automation_proposals.py  test_cli_hardening.py  test_cli_mode_validation.py  test_cli_output.py  test_cli_subcommands.py  test_cloner.py  test_config.py  (+159 more)
(+196 files in other folders)
